<resources>
    <string name="app_name">CCC Android Wear Sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_drawer_description">CCC Android Wear Sample</string>
    <string name="nav_drawer_contact">android@faziodev.org</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_notification">Send Notification</string>
    <string name="send_a_notification">Send a Notification</string>
    <string name="content_label">Content:</string>
    <string name="subject_label">Subject:</string>
    <string name="search_term_label">Search Term:</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification_actions_title">Notification Actions</string>
    <string name="notifications_group_title">Notifications</string>
    <string name="wearable_only_notification_actions_title">Wearable-Only Notification Actions</string>
    <string name="default_notification_text">Test Notification</string>
    <string name="NotificationPlusAction">Notification + Action</string>
    <string name="notfication_with_big_text">Notification w/ Big Text</string>
    <string name="notification_pages">Notification w/ Pages</string>
</resources>
