<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:title="@string/notifications_group_title">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notifications_title" />
        <item
            android:id="@+id/nav_notification_actions"
            android:icon="@drawable/ic_search_for_black_24dp"
            android:title="@string/notification_actions_title" />
        <item
            android:id="@+id/nav_notification_wearable_actions"
            android:icon="@drawable/ic_search_for_black_24dp"
            android:title="@string/wearable_only_notification_actions_title" />
        <item
            android:id="@+id/nav_notification_large_text"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="Notification + Large Text" />
        <item
            android:id="@+id/nav_notification_pages"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="Notification with Pages" />
    </group>
</menu>
