<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NotificationPagesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_a_notification"
        android:id="@+id/send_notification_label"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal|top"
        android:gravity="top"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/send_notification_label"
        android:id="@+id/subject_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_label"
            android:id="@+id/notification_subject"
            android:textSize="24sp"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subject_edit_text"
            android:text="@string/default_notification_text"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/page_1_layout"
        android:layout_below="@+id/subject_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/content_label"
            android:id="@+id/page_1_label"
            android:textSize="24sp"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:id="@+id/page_1_text"
            android:layout_gravity="center_horizontal"
            android:text="This is page 1."
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/page_2_layout"
        android:layout_below="@+id/page_1_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/content_label"
            android:id="@+id/page_2_label"
            android:textSize="24sp"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:id="@+id/page_2_text"
            android:layout_gravity="center_horizontal"
            android:text="This is page 2, which will work as a much longer area.  It makes sense to have extra info here after seeing the first page."
            android:inputType="textMultiLine" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:id="@+id/send_notification_button"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
